tests/valid/edge_cases/empty_string.nyx
// Edge case: string with no characters (empty string)
func takes_string(s: [u8]) -> ok
    pass

func use_empty() -> ok
    let empty = ""
    let also_empty = ""
    takes_string("")
    pass
