tests/invalid/syntax/keyword_as_identifier.nyx
// Invalid: Using reserved keyword as identifier
func return() -> ok
    let if = 5
    pass
